--- a/env.local.sample
+++ b/env.local.sample
@@ -1,12 +1,16 @@
 # Public Environment variables that can be used in the browser.
-NEXT_PUBLIC_AUTH0_CLIENT_ID="YOUR ID"
-NEXT_PUBLIC_AUTH0_SCOPE="openid profile"
-NEXT_PUBLIC_AUTH0_DOMAIN="YOUR DOMAIN"
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
-NEXT_PUBLIC_REDIRECT_URI="/api/callback"
+NEXT_PUBLIC_AUTH0_CLIENT_ID=***************
+NEXT_PUBLIC_AUTH0_SCOPE="openid profile"
+NEXT_PUBLIC_AUTH0_DOMAIN=***************
+NEXT_PUBLIC_REDIRECT_URI=***************
 NEXT_PUBLIC_POST_LOGOUT_REDIRECT_URI="/"
+NEXT_PUBLIC_LANG=en
+NEXT_PUBLIC_LANGS='["en","fr"]'
+NEXT_PUBLIC_MAPTILER_URL=https://api.maptiler.com/maps/voyager/style.json?key=
+NEXT_PUBLIC_MAPTILER_KEY=*************
 
 # Secret environment variables only available to Node.js
-AUTH0_CLIENT_SECRET="YOUR AUTH0 SECRET"
-SESSION_COOKIE_SECRET="YOUR RANDOM STRING"
-SESSION_COOKIE_LIFETIME=7200
+AUTH0_CLIENT_SECRET=***************
+SESSION_COOKIE_SECRET=***************
+SESSION_COOKIE_LIFETIME=***************
