--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.0",
+    "date-fns": "^2.29.1",
     "next": "12.1.6",
     "nprogress": "^0.2.0",
     "ol": "^6.14.1",
