--- a/package.json
+++ b/package.json
@@ -11,36 +11,37 @@
     "test:run": "cypress run"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.9.0",
-    "date-fns": "^2.29.1",
-    "next": "12.1.6",
+    "@auth0/nextjs-auth0": "^1.9.2",
+    "date-fns": "^2.29.3",
+    "next": "12.3.1",
     "nprogress": "^0.2.0",
-    "ol": "^6.14.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "swiper": "^8.2.3",
-    "uuid": "^8.3.2"
+    "ol": "^7.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "swiper": "^8.4.4",
+    "swr": "^1.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^12.1.6",
-    "@types/node": "17.0.42",
+    "@next/eslint-plugin-next": "^12.3.1",
+    "@types/node": "18.11.4",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "18.0.12",
+    "@types/react": "18.0.21",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
-    "cypress": "^10.1.0",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "cypress": "^10.10.0",
+    "eslint": "8.26.0",
+    "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "prettier": "^2.6.2",
-    "typescript": "4.7.3",
-    "ws": "^8.8.0"
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
+    "typescript": "4.8.4",
+    "ws": "^8.9.0"
   },
   "browserslist": [
     "defaults",
