--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.2",
     "date-fns": "^2.29.3",
+    "leaflet": "^1.9.3",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
+    "leaflet-geosearch": "^3.7.0",
     "next": "13.0.5",
     "nprogress": "^0.2.0",
-    "ol": "^7.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.1.0",
     "swiper": "^8.4.5",
     "swr": "^1.3.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.0.5",
+    "@types/leaflet": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.25",
