--- a/env.local.sample
+++ b/env.local.sample
@@ -1,17 +1,10 @@
-NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_BASE_URL='http://localhost:3000'
 NEXT_PUBLIC_LANG=en
 NEXT_PUBLIC_LANGS='["en","fr"]'
-NEXT_PUBLIC_MAPTILER_URL=https://api.maptiler.com/maps/voyager/tiles.json?key=
-NEXT_PUBLIC_MAPTILER_KEY=*********************
+NEXT_PUBLIC_MAPBOX_KEY=*********************
 
 AUTH0_SECRET=*****************************
-AUTH0_BASE_URL="http://localhost:3000"
-AUTH0_ISSUER_BASE_URL=************************
-AUTH0_CLIENT_ID=************************
-AUTH0_CLIENT_SECRET=*************************
-
-PGSQL_HOST=127.0.0.1
-PGSQL_PORT=5432
-PGSQL_DATABASE=*****************
-PGSQL_USER=*****************
-PGSQL_PASSWORD=****************
+AUTH0_BASE_URL=http://localhost:3000
+AUTH0_ISSUER_BASE_URL=*****************************
+AUTH0_CLIENT_ID=*****************************
+AUTH0_CLIENT_SECRET=*****************************
