lang en renamed to en-US

--- a/env.local.sample
+++ b/env.local.sample
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_BASE_URL='http://localhost:3000'
-NEXT_PUBLIC_LANG=en
-NEXT_PUBLIC_LANGS='["en","fr"]'
+NEXT_PUBLIC_LANG='en-US'
+NEXT_PUBLIC_LANGS='["en-US","fr"]'
 NEXT_PUBLIC_MAPBOX_KEY=*********************
 
 AUTH0_SECRET=*****************************
