--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "leaflet": "^1.9.3",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "leaflet-geosearch": "^3.7.0",
+    "lodash": "^4.17.21",
     "next": "13.0.5",
+    "next-intl": "^2.9.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.0.5",
     "@types/leaflet": "^1.9.0",
+    "@types/lodash": "^4.14.190",
     "@types/node": "18.11.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.25",
