--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.1.0",
-    "swiper": "^8.4.5",
-    "uuid": "^9.0.0"
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.0.5",
@@ -34,7 +33,6 @@
     "@types/node": "18.11.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.25",
-    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "cypress": "^11.2.0",
