--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.1.0",
+    "sharp": "^0.31.3",
     "swiper": "^8.4.5"
   },
   "devDependencies": {
