--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
     "sharp": "^0.31.3",
-    "swiper": "^9.1.1"
+    "swiper": "^9.1.1",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.2.4",
