--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,16 @@
         "@typescript-eslint/no-unused-vars": ["error"],
         "@typescript-eslint/explicit-function-return-type": "off",
         "prettier/prettier": ["error", {}, { "usePrettierrc": true }], // Includes .prettierrc.js rules
-        "jsx-a11y/no-onchange": "off"
+        "jsx-a11y/no-onchange": "off",
+        "no-restricted-imports": "off",
+        "@typescript-eslint/no-restricted-imports": [
+          "warn",
+          {
+            "name": "react-redux",
+            "importNames": ["useSelector", "useDispatch"],
+            "message": "Use typed hooks `useAppDispatch` and `useAppSelector` instead."
+          }
+        ]
       }
     }
   ]
