--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.3.0",
+    "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@types/react-redux": "^7.1.33",
     "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
@@ -23,9 +26,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
     "sharp": "^0.32.6",
-    "swiper": "^11.0.4",
-    "zustand": "^4.4.6"
+    "swiper": "^11.0.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.2",
